# Always-be-learning

./: .clang-format  .clang-tidy  .gitignore  README.md  _.7z
Allocators/: CMakeLists.txt  MallocFreeAllocator.h  memory_example_1.cpp  myalloc1.hpp  myalloc3.hpp  short_alloc.cpp
Allocators/short_alloc/: short_alloc.h
DataStructures/: CMakeLists.txt
DataStructures/BinaryTree/: CMakeLists.txt
DataStructures/BinaryTree/include/: CMakeLists.txt
DataStructures/BinaryTree/include/binary_tree/: binary_tree.hpp
DataStructures/BinaryTree/src/: CMakeLists.txt
DataStructures/BinaryTree/tests/: CMakeLists.txt  ut_binary_tree.cpp  ut_binary_tree_iterator.cpp
DataStructures/HashMap/: CMakeLists.txt
DataStructures/HashMap/include/: CMakeLists.txt
DataStructures/HashMap/include/hash_map/: hash_map.hpp  hash_map_bucket.hpp
DataStructures/HashMap/tests/: CMakeLists.txt  ut_hash_map.cpp  ut_hash_map_bucket.cpp
DataStructures/SingleLinkedList/include/: CMakeLists.txt
DataStructures/SingleLinkedList/include/single_linked_list/: single_linked_list.hpp
DataStructures/SingleLinkedList/src/: CMakeLists.txt
DataStructures/SingleLinkedList/tests/: CMakeLists.txt  ut_single_linked_list.cpp  ut_sll_iterator.cpp
DataStructures/cmake/: objcopy_target.cmake  openocd.cmake
DataStructures/depends/: CMakeLists.txt
DataStructures/utils/: CMakeLists.txt
DataStructures/utils/utils/: Assertion.h  is_detected.h
ErrorHandling/error_code/: CMakeLists.txt
Libraries/asio/: CMakeLists.txt
Libraries/asio/chat/: CMakeLists.txt  chat_client.cpp  chat_message.hpp  chat_server.cpp  message_test.cpp
Libraries/asio/cmake/: static_analysis.cmake
Libraries/asio/olc/: CMakeLists.txt  simple_asio.cpp
Libraries/asio/olc/networking/: CMakeLists.txt  net_client.cpp  net_server.cpp
Libraries/asio/server_client/: CMakeLists.txt  daytime.h  multicast_receiver.cpp  multicast_sender.cpp  tcp_daytime_async_server.cpp  tcp_daytime_client.cpp  tcp_daytime_server.cpp  tcp_echo_server_async.cpp  tcp_server_shared_buffer.cpp  tcp_udp_daytime_async_server.cpp  udp_daytime_async_server.cpp  udp_daytime_client.cpp  udp_daytime_future.cpp  udp_daytime_server.cpp
Libraries/asio/src/: CMakeLists.txt  main.cpp
Libraries/asio/timer/: CMakeLists.txt  timer_1.cpp  timer_2.cpp  timer_3.cpp  timer_4.cpp  timer_5.cpp
Libraries/asio/utils/utils/: Assertion.h
Libraries/qt5/: CMakeLists.txt
Libraries/qt5/cmake/: build_cache.cmake  build_type.cmake  copy_if_different.cmake  coverage.cmake  doxygen.cmake  options.cmake  output_directories.cmake
Libraries/qt5/zetcode/: CMakeLists.txt
Libraries/qt5/zetcode/Ch10_Widgets/: CMakeLists.txt  checkbox.cpp  combobox.cpp  label.cpp  lineedit.cpp  listwidget.cpp  pixmap.cpp  progressbar.cpp  slider.cpp  spinbox.cpp  splitter.cpp  statusbar.cpp  tablewidget.cpp
Libraries/qt5/zetcode/Ch11_Painting/: CMakeLists.txt  colors.cpp  donut.cpp  linear_gradients.cpp  lines.cpp  patterns.cpp  puff.cpp  radial_gradients.cpp  shapes.cpp  transparency.cpp
Libraries/qt5/zetcode/Ch12_Custom/: CMakeLists.txt  application.cpp  application.h  main.cpp  widget.cpp  widget.h
Libraries/qt5/zetcode/Ch13_Snake/: CMakeLists.txt  main.cpp  snake.cpp  snake.h
Libraries/qt5/zetcode/Ch14_Breakout/: CMakeLists.txt  ball.cpp  ball.h  breakout.cpp  breakout.h  brick.cpp  brick.h  main.cpp  paddle.cpp  paddle.h
Libraries/qt5/zetcode/Ch1_Intro/: CMakeLists.txt  simple.cpp  version.cpp
Libraries/qt5/zetcode/Ch2_Strings/: CMakeLists.txt  access.cpp  basic.cpp  building.cpp  comparison.cpp  converting.cpp  hello.c  html_escape.cpp  init.cpp  justification.cpp  length.cpp  looping.cpp  qchar_types.cpp  substrings.cpp
Libraries/qt5/zetcode/Ch3_DateTime/: CMakeLists.txt  comparedates.cpp  currenttime.cpp  dateformats.cpp  datetime.cpp  daystofrom.cpp  init.cpp  julianday.cpp  leapyear.cpp  nofdays.cpp  timeformats.cpp  unixepoch.cpp  utclocal.cpp  validity.cpp  weekday.cpp
Libraries/qt5/zetcode/Ch4_Containers/: CMakeLists.txt  custom_class_sorting.cpp  mylist.cpp  mymap.cpp  myset.cpp  mystringlist.cpp  myvector.cpp
Libraries/qt5/zetcode/Ch5_FilesDirs/: CMakeLists.txt  colors  copy_file.cpp  dirs.cpp  file_path.cpp  file_size.cpp  file_times.cpp  list_dir.cpp  owner.cpp  permissions.cpp  read_file.cpp  special_paths.cpp  write2file.cpp
Libraries/qt5/zetcode/Ch6_FirstApps/: CMakeLists.txt  cursor.cpp  icon.cpp  plusminus.cpp  pushbutton.cpp  simple.cpp  tooltip.cpp
Libraries/qt5/zetcode/Ch7_MenusToolbars/: CMakeLists.txt  anothermenu.cpp  checkable.cpp  simplemenu.cpp  skeleton.cpp  skeleton.h  skeleton_main.cpp  toolbar.cpp
Libraries/qt5/zetcode/Ch8_Layouts/: CMakeLists.txt  form.cpp  (+6 more)
Libraries/sockets/: CMakeLists.txt  notes.md
Libraries/sockets/cmake/: output_directories.cmake  project_settings.cmake  release.cmake  sanitizers.cmake
Libraries/sockets/low_level/: CMakeLists.txt  dgram_broadcaster.cpp  dgram_listener.cpp  dgram_talker.cpp  float_serialization.cpp  hello_client.cpp  hello_server.cpp  poll_example.cpp  poll_server.cpp  select_demo.cpp  selectserver.cpp  showip.cpp
Libraries/sockets/utils/: CMakeLists.txt
Memory/tracking_allocation/: CMakeLists.txt  leaking_app.cpp  leaking_app_src_loc.cpp  leaking_app_src_loc_myalloc.cpp  my_allocator.h  new_tracker.h  new_tracker_src_loc.h  new_tracker_src_loc_myalloc.h
Metaprogramming/bind_front/: CMakeLists.txt  bind_front.hpp  main.cpp
Metaprogramming/contracts/: CMakeLists.txt  main.cpp
Metaprogramming/contracts/api/: contract_assert.h
Metaprogramming/strong_typedef/: CMakeLists.txt  main.cpp  strong_typedef.hpp
Metaprogramming/structured_bindings/: CMakeLists.txt  structured_bindings.hpp
Patterns/Active_object/: CMakeLists.txt  active.cpp  active.h  backgrounder.h  main.cpp  threadsafe_queue.h
Patterns/shared_library/: CMakeLists.txt
Patterns/shared_library/api/: CMakeLists.txt
Patterns/shared_library/cmake/: clang_tidy.cmake  config.cmake  coverage.cmake  options.cmake  release.cmake
Patterns/shared_library/src/: CMakeLists.txt  foobar.cpp
Testing/debug/: CMakeLists.txt  trace.h  trace_level.h.in
(+304 files in other folders)
